--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,9 @@ name: Go
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      - source/**
+      - serverless.yml
 
 env:
   AWS_DEFAULT_REGION: ap-southeast-2
