--- a/serverless.yml
+++ b/serverless.yml
@@ -44,6 +44,10 @@ functions:
       SPOTIFY_SECRET_ID: ${env:SPOTIFY_SECRET_ID}
       REFRESH_QUEUE: https://sqs.ap-southeast-2.amazonaws.com/135314794262/chune-refresh-${self:provider.stage}
       COUNTER_QUEUE: https://sqs.ap-southeast-2.amazonaws.com/135314794262/bean-counter-${self:provider.stage}
+    tags:
+      Environment: ${self:provider.stage}
+      Component: music
+      Type: service
     events:
       - sqs:
           arn: arn:aws:sqs:ap-southeast-2:135314794262:chune-refresh-${self:provider.stage}
@@ -63,6 +67,10 @@ functions:
         - ./source/bin/beanCounter
     environment:
       SCORER_QUEUE: https://sqs.ap-southeast-2.amazonaws.com/135314794262/scorer-${self:provider.stage}
+    tags:
+      Environment: ${self:provider.stage}
+      Component: scoring
+      Type: service
     events:
       - sqs:
           arn: arn:aws:sqs:ap-southeast-2:135314794262:bean-counter-${self:provider.stage}
@@ -79,6 +87,10 @@ functions:
     package:
       include:
         - ./source/bin/scoreTaker
+    tags:
+      Environment: ${self:provider.stage}
+      Component: scoring
+      Type: service
     events:
       - sqs:
           arn: arn:aws:sqs:ap-southeast-2:135314794262:scorer-${self:provider.stage}
@@ -95,6 +107,10 @@ functions:
     package:
       include:
         - ./source/bin/townCrier
+    tags:
+      Environment: ${self:provider.stage}
+      Component: notifications
+      Type: service
     events:
       - sqs:
           arn: arn:aws:sqs:ap-southeast-2:135314794262:town-crier-${self:provider.stage}
@@ -108,6 +124,10 @@ functions:
     description: "Authorizes incoming APIGW requests and verifies the token"
     environment:
       JWT_VERIFY_KEY: ${env:JWT_VERIFY_KEY}
+    tags:
+      Environment: ${self:provider.stage}
+      Component: authentication
+      Type: integration
     package:
       include:
         - ./source/bin/authorizer
@@ -119,6 +139,10 @@ functions:
     package:
       include:
         - ./source/bin/signup
+    tags:
+      Environment: ${self:provider.stage}
+      Component: authentication
+      Type: integration
     events:
       - http:
           path: account/signup
@@ -134,6 +158,10 @@ functions:
     package:
       include:
         - ./source/bin/signin
+    tags:
+      Environment: ${self:provider.stage}
+      Component: authentication
+      Type: integration
     events:
       - http:
           path: account/signin
@@ -157,6 +185,10 @@ functions:
     package:
       include:
         - ./source/bin/oauthAuthenticate
+    tags:
+      Environment: ${self:provider.stage}
+      Component: authentication
+      Type: integration
     events:
       - http:
           path: oauth/{provider}/login
@@ -181,6 +213,10 @@ functions:
     package:
       include:
         - ./source/bin/oauthCallback
+    tags:
+      Environment: ${self:provider.stage}
+      Component: authentication
+      Type: integration
     events:
       - http:
           path: oauth/{provider}/redirect
@@ -201,6 +237,10 @@ functions:
     package:
       include:
         - ./source/bin/registerDevice
+    tags:
+      Environment: ${self:provider.stage}
+      Component: notifications
+      Type: integration
     events:
       - http:
           path: user/device
@@ -221,6 +261,10 @@ functions:
     package:
       include:
         - ./source/bin/deregisterDevice
+    tags:
+      Environment: ${self:provider.stage}
+      Component: notifications
+      Type: integration
     events:
       - http:
           path: user/device
@@ -241,6 +285,10 @@ functions:
     package:
       include:
         - ./source/bin/getUser
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: user/{userId}
@@ -262,6 +310,10 @@ functions:
     package:
       include:
         - ./source/bin/updateUser
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: user
@@ -284,6 +336,10 @@ functions:
     package:
       include:
         - ./source/bin/getAvatarURL
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: user/avatar
@@ -302,6 +358,10 @@ functions:
     package:
       include:
         - ./source/bin/createGroup
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group
@@ -322,6 +382,10 @@ functions:
     package:
       include:
         - ./source/bin/getGroup
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}
@@ -343,6 +407,10 @@ functions:
     package:
       include:
         - ./source/bin/getGroupMembers
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}/members
@@ -366,6 +434,10 @@ functions:
     package:
       include:
         - ./source/bin/updateGroup
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}
@@ -389,6 +461,10 @@ functions:
     package:
       include:
         - ./source/bin/joinGroup
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/membership
@@ -409,6 +485,10 @@ functions:
     package:
       include:
         - ./source/bin/leaveGroup
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/membership
@@ -426,6 +506,10 @@ functions:
     package:
       include:
         - ./source/bin/getGroupQR
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}/qr
@@ -447,6 +531,10 @@ functions:
     package:
       include:
         - ./source/bin/createGame
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}/game
@@ -464,6 +552,10 @@ functions:
     package:
       include:
         - ./source/bin/updateGame
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}/game/{gameId}
@@ -481,6 +573,10 @@ functions:
     package:
       include:
         - ./source/bin/deleteGame
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}/game/{gameId}
@@ -498,6 +594,10 @@ functions:
     package:
       include:
         - ./source/bin/getGames
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: group/{groupId}/game
@@ -516,6 +616,10 @@ functions:
     package:
       include:
         - ./source/bin/createVote
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: user/vote
@@ -536,6 +640,10 @@ functions:
     package:
       include:
         - ./source/bin/deleteVote
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     events:
       - http:
           path: user/vote/{songId}
@@ -558,6 +666,10 @@ functions:
     package:
       include:
         - ./source/bin/songSearch
+    tags:
+      Environment: ${self:provider.stage}
+      Component: api
+      Type: integration
     environment:
       SPOTIFY_CLIENT_ID: ${env:SPOTIFY_CLIENT_ID}
       SPOTIFY_SECRET_ID: ${env:SPOTIFY_SECRET_ID}
