--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,15 @@ jobs:
         with:
           go-version: 1.15
 
-      - name: Get Dependencies
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - name: NPM Dependencies
+        run: npm install -g serverless serverless-dotenv-plugin
+
+      - name: Go Dependencies
         working-directory: source/
         run: go mod download
 
@@ -65,14 +73,6 @@ jobs:
           go build -ldflags="-s -w" -o bin/scoreTaker         lambda/score-taker/main.go
           go build -ldflags="-s -w" -o bin/authorizer         lambda/authorizer/main.go
           go build -ldflags="-s -w" -o bin/townCrier          lambda/town-crier/main.go
-
-      - name: Setup Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-
-      - name: Install serverless
-        run: npm install -g serverless serverless-dotenv-plugin
 
       - name: Set file permissions
         working-directory: source/bin
