--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,4 +91,4 @@ jobs:
           GH_CLIENT_ID: ${{ secrets.GH_SECRET_ID }}
           SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
           SPOTIFY_SECRET_ID: ${{ secrets.SPOTIFY_SECRET_ID }}
-        run: serverless deploy --verbose --stage staging
+        run: serverless deploy --verbose --stage staging --release "jaypi@${GITHUB_SHA:0:8}"
