Run when wf changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - source/**
       - serverless.yml
+      - .github/workflows/main.yml
 
 env:
   AWS_DEFAULT_REGION: ap-southeast-2
