--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Go
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main, 'feature/*']
+    branches: [ main ]
     paths:
       - source/**
       - serverless.yml
