--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,13 @@
 name: Go
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
     paths:
       - source/**
       - serverless.yml
+      - .github/workflows/main.yml
 
 env:
   AWS_DEFAULT_REGION: ap-southeast-2
