Add validateJwt function to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           go build -ldflags="-s -w" -o bin/signup             rest/account/signup/main.go
           go build -ldflags="-s -w" -o bin/signin             rest/account/signin/main.go
+          go build -ldflags="-s -w" -o bin/validateJwt        rest/account/validateJwt/main.go
           go build -ldflags="-s -w" -o bin/oauthAuthenticate  rest/oauth/authenticate/main.go
           go build -ldflags="-s -w" -o bin/oauthCallback      rest/oauth/callback/main.go
 
