--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
 
           go build -ldflags="-s -w" -o bin/createGroup        rest/group/createGroup/main.go
           go build -ldflags="-s -w" -o bin/getGroup           rest/group/getGroup/main.go
+          go build -ldflags="-s -w" -o bin/deleteGroup        rest/group/deleteGroup/main.go
           go build -ldflags="-s -w" -o bin/getGroupMembers    rest/group/getGroupMembers/main.go
           go build -ldflags="-s -w" -o bin/updateGroup        rest/group/updateGroup/main.go
           go build -ldflags="-s -w" -o bin/joinGroup          rest/group/joinGroup/main.go
