Remove groups attribute from users

--- a/serverless.yml
+++ b/serverless.yml
@@ -345,6 +345,7 @@ functions:
             parameters:
               querystrings:
                 withVotes: true
+                withGroups: true
               paths:
                 userId: true
           authorizer:
