--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,7 @@ jobs:
 
           go build -ldflags="-s -w" -o bin/songSearch         rest/song/songSearch/main.go
           go build -ldflags="-s -w" -o bin/getPlayedSongs     rest/song/getPlayedSongs/main.go
+          go build -ldflags="-s -w" -o bin/purgeSongs         rest/song/purgeSongs/main.go
 
           go build -ldflags="-s -w" -o bin/createVote         rest/votes/createVote/main.go
           go build -ldflags="-s -w" -o bin/deleteVote         rest/votes/deleteVote/main.go
